@@ -389,21 +389,10 @@ util.recipe.change_recipe_ingredients("express-transport-belt",
   {
     {type = "item", name = "sp-titanium-frame", amount = 2},
     {type = "item", name = "electric-engine-unit", amount = 2},
+    {type = "item", name = "sp-electromagnet", amount = 2},
     {type = "item", name = "sp-gearbox", amount = 2},
     {type = "item", name = "advanced-circuit", amount = 1},
     {type = "fluid", name = "lubricant", amount = 25}
-  },
-  nil)
-
-
-util.recipe.change_recipe_ingredients("turbo-transport-belt",
-  {
-    {type = "item", name = "processing-unit", amount = 1},
-    {type = "item", name = "electric-engine-unit", amount = 2},
-    {type = "item", name = "sp-ball-bearing", amount = 2},
-    {type = "item", name = "sp-electromagnet", amount = 2},
-    {type = "item", name = "sp-aluminum-brass", amount = 2},
-    {type = "item", name = "low-density-structure", amount = 1}
   },
   nil)
 
@@ -434,17 +423,6 @@ util.recipe.change_recipe_ingredients("express-underground-belt",
   },
   nil)
 
-util.recipe.change_recipe_ingredients("turbo-underground-belt",
-  {
-    {type = "item", name = "turbo-transport-belt", amount = 16},
-    {type = "item", name = "sp-TiNb", amount = 4},
-    {type = "item", name = "sp-invar", amount = 5},
-    {type = "item", name = "sp-heavy-gearbox", amount = 4},
-    {type = "item", name = "sp-compressor", amount = 2},
-    {type = "item", name = "sp-bolts", amount = 20}
-  },
-  nil)
-
 util.recipe.change_recipe_ingredients("splitter",
   {
     {type = "item", name = "sp-automation-core", amount = 1},
@@ -470,16 +448,6 @@ util.recipe.change_recipe_ingredients("express-splitter",
     {type = "item", name = "sp-actuator", amount = 2},
     {type = "item", name = "express-transport-belt", amount = 2},
     {type = "item", name = "advanced-circuit", amount = 2}
-  },
-  nil)
-
-util.recipe.change_recipe_ingredients("turbo-splitter",
-  {
-    {type = "item", name = "turbo-transport-belt", amount = 2},
-    {type = "item", name = "sp-invar", amount = 3},
-    {type = "item", name = "processing-unit", amount = 2},
-    {type = "item", name = "sp-actuator", amount = 4},
-    {type = "item", name = "sp-bolts", amount = 6}
   },
   nil)
 
