@@ -200,6 +200,7 @@ sp-arsenic-iodide=Arsenic iodide
 sp-arsenic-sulfide=Arsenic sulfide
 sp-arsenic-trioxide=Arsenic trioxide
 sp-automation-core=Automation core
+sp-automation-science-pack=Automation science pack
 sp-automation-science-pack-2=Automation science pack 2
 sp-automation-science-pack-3=Automation science pack 3
 sp-ball-bearing=Ball bearing
@@ -214,10 +215,12 @@ sp-big-electric-engine-unit=Big electric engine unit
 sp-bio-capacitor=Bio capacitor
 sp-bio-fuel=Bio fuel
 sp-biochip=Biochip
+sp-biological-science-pack=Biological science pack
 sp-biological-science-pack-3=Biological science pack 3
 sp-bioreactor=Bioreactor
 sp-biusart-lab=Biusart lab
 sp-blunagium=Blunagium
+sp-blunagium-acrosphere=Blunagium acrosphere
 sp-blunagium-acrosphere-1=Blunagium acrosphere 1
 sp-blunagium-acrosphere-2=Blunagium acrosphere 2
 sp-blunagium-bar=Blunagium bar
@@ -252,6 +255,7 @@ sp-ceramic-matrix-composites=Ceramic matrix composites
 sp-ceramics=Ceramics
 sp-cerium=Cerium
 sp-charged-slab=Charged slab
+sp-chemical-science-pack=Chemical science pack
 sp-chemical-science-pack-2=Chemical science pack 2
 sp-chemical-science-pack-3=Chemical science pack 3
 sp-chemical-stager=Chemical stager
@@ -271,6 +275,7 @@ sp-collapsed-orbitals=Collapsed orbitals
 sp-combustion-chamber=Combustion chamber
 sp-composites=Composites
 sp-compressor=Compressor
+sp-computer-science-pack=Computer science pack
 sp-computer-science-pack-2=Computer science pack 2
 sp-computer-science-pack-3=Computer science pack 3
 sp-condenser-coil=Condenser coil
@@ -281,6 +286,7 @@ sp-copper-antimony=Copper antimony
 sp-copper-tube=Copper tube
 sp-core-extractor=Core extractor
 sp-core-fragment=Core fragment
+sp-corrupted-acrosphere=Corrupted acrosphere
 sp-corrupted-acrosphere-1=Corrupted acrosphere 1
 sp-corrupted-acrosphere-2=Corrupted acrosphere 2
 sp-corrupted-acrosphere-3=Corrupted acrosphere 3
@@ -298,6 +304,7 @@ sp-crushed-titanium-ore=Crushed titanium ore
 sp-crushed-tungsten-ore=Crushed tungsten ore
 sp-crushed-zinc-ore=Crushed zinc ore
 sp-crushed-zirconium-ore=Crushed zirconium ore
+sp-cryogenic-science-pack=Cryogenic science pack
 sp-cryogenic-science-pack-3=Cryogenic science pack 3
 sp-cryostat=Cryostat
 sp-cubit=Cubit
@@ -313,12 +320,15 @@ sp-diode=Diode
 sp-drillhead=Drillhead
 sp-duralumin=Duralumin
 sp-dynamo=Dynamo
+sp-efficiency-module=Efficiency module
 sp-efficiency-module-4=Efficiency module 4
 sp-electrode=Electrode
 sp-electromagnet=Electromagnet
 sp-electromagnetic-brake=Electromagnetic brake
+sp-electromagnetic-science-pack=Electromagnetic science pack
 sp-electromagnetic-science-pack-2=Electromagnetic science pack 2
 sp-electromagnetic-science-pack-3=Electromagnetic science pack 3
+sp-electronic-science-pack=Electronic science pack
 sp-electronic-science-pack-1=Electronic science pack 1
 sp-electronic-science-pack-2=Electronic science pack 2
 sp-electronic-science-pack-3=Electronic science pack 3
@@ -357,6 +367,7 @@ sp-fuel-injector=Fuel injector
 sp-gamma-radiation-source=Gamma radiation source
 sp-gearbox=Gearbox
 sp-gearshaft=Gearshaft
+sp-geological-science-pack=Geological science pack
 sp-geological-science-pack-1=Geological science pack 1
 sp-geological-science-pack-2=Geological science pack 2
 sp-geological-science-pack-3=Geological science pack 3
@@ -372,6 +383,7 @@ sp-gravitational-wave-splitter=Gravitational wave splitter
 sp-gravitonium=Gravitonium
 sp-gravity-assembler=Gravity assembler
 sp-grobgnum=Grobgnum
+sp-grobgnum-acrosphere=Grobgnum acrosphere
 sp-grobgnum-acrosphere-1=Grobgnum acrosphere 1
 sp-grobgnum-acrosphere-2=Grobgnum acrosphere 2
 sp-grobgnum-bar=Grobgnum bar
@@ -471,6 +483,7 @@ sp-light-emitting-diode=Light emitting diode
 sp-lithium-chloride=Lithium chloride
 sp-lithium-oxide=Lithium oxide
 sp-lithium-sulfur-battery=Lithium sulfur battery
+sp-logistic-science-pack=Logistic science pack
 sp-logistic-science-pack-2=Logistic science pack 2
 sp-logistic-science-pack-3=Logistic science pack 3
 sp-lossless-power-connector=Lossless power connector
@@ -487,6 +500,7 @@ sp-manganese-ingot=Manganese ingot
 sp-manganese-ore=Manganese ore
 sp-manufacturer=Manufacturer
 sp-maraging-steel=Maraging steel
+sp-material-science-pack=Material science pack
 sp-material-science-pack-1=Material science pack 1
 sp-material-science-pack-2=Material science pack 2
 sp-material-science-pack-3=Material science pack 3
@@ -494,10 +508,12 @@ sp-matter-science-pack=Matter science pack
 sp-medium-storage-tank=Medium storage tank
 sp-memory-chip=Memory chip
 sp-mercury-ore=Mercury ore
+sp-metallurgic-science-pack=Metallurgic science pack
 sp-metallurgic-science-pack-2=Metallurgic science pack 2
 sp-metallurgic-science-pack-3=Metallurgic science pack 3
 sp-micro-frame=Micro frame
 sp-micro-machine=Micro machine
+sp-military-science-pack=Military science pack
 sp-military-science-pack-2=Military science pack 2
 sp-military-science-pack-3=Military science pack 3
 sp-miniaturized-star-core-stabilizer=Miniaturized star core stabilizer
@@ -527,6 +543,7 @@ sp-niobium-steel=Niobium steel
 sp-niobium-tin=Niobium tin
 sp-nitenol=Nitenol
 sp-nozzle=Nozzle
+sp-nuclear-science-pack=Nuclear science pack
 sp-nuclear-science-pack-2=Nuclear science pack 2
 sp-nuclear-science-pack-3=Nuclear science pack 3
 sp-nuclear-waste=Nuclear waste
@@ -548,6 +565,7 @@ sp-plasma-crystal=Plasma crystal
 sp-plasmacutter=Plasmacutter
 sp-plate-heat-exchanger=Plate heat exchanger
 sp-platinum=Platinum
+sp-plutonium=Plutonium
 sp-plutonium-239=Plutonium 239
 sp-plutonium-240=Plutonium 240
 sp-plutonium-fuel-rod=Plutonium fuel rod
@@ -561,7 +579,9 @@ sp-precipitator=Precipitator
 sp-pressure-tube=Pressure tube
 sp-pressure-valve=Pressure valve
 sp-processor=Processor
+sp-production-science-pack=Production science pack
 sp-production-science-pack-3=Production science pack 3
+sp-productivity-module=Productivity module
 sp-productivity-module-4=Productivity module 4
 sp-proton-neutron-frame=Proton neutron frame
 sp-proton-neutron-superconductor=Proton neutron superconductor
@@ -596,6 +616,7 @@ sp-rocket-control-unit=Rocket control unit
 sp-rocket-engine=Rocket engine
 sp-rubber=Rubber
 sp-rukite=Rukite
+sp-rukite-acrosphere=Rukite acrosphere
 sp-rukite-acrosphere-1=Rukite acrosphere 1
 sp-rukite-acrosphere-2=Rukite acrosphere 2
 sp-rukite-bar=Rukite bar
@@ -623,8 +644,10 @@ sp-sodium-carbonate=Sodium carbonate
 sp-sodium-molybdate=Sodium molybdate
 sp-solder=Solder
 sp-solid-rocket-motor=Solid rocket motor
+sp-space-science-pack=Space science pack
 sp-space-science-pack-3=Space science pack 3
 sp-spark-plug=Spark plug
+sp-speed-module=Speed module
 sp-speed-module-4=Speed module 4
 sp-spring=Spring
 sp-stainless-steel=Stainless steel
@@ -669,6 +692,7 @@ sp-universal-storage-drive=Universal storage drive
 sp-uranium-fuel-rod=Uranium fuel rod
 sp-urea=Urea
 sp-used-up-fuel-rod=Used up fuel rod
+sp-utility-science-pack=Utility science pack
 sp-utility-science-pack-3=Utility science pack 3
 sp-vacuum-pump=Vacuum pump
 sp-vacuum-tube=Vacuum tube
@@ -689,6 +713,7 @@ sp-wood-fuel=Wood fuel
 sp-wooden-board=Wooden board
 sp-wooden-pole=Wooden pole
 sp-yemnuth=Yemnuth
+sp-yemnuth-acrosphere=Yemnuth acrosphere
 sp-yemnuth-acrosphere-1=Yemnuth acrosphere 1
 sp-yemnuth-acrosphere-2=Yemnuth acrosphere 2
 sp-yemnuth-explorer=Yemnuth explorer
@@ -753,6 +778,7 @@ sp-arsen-pillet=Arsen pillet
 sp-arsenic-iodide=Arsenic iodide
 sp-arsenic-sulfide=Arsenic sulfide
 sp-automation-core=Automation core
+sp-automation-science-pack=Automation science pack
 sp-automation-science-pack-2=Automation science pack 2
 sp-automation-science-pack-3=Automation science pack 3
 sp-ball-bearing=Ball bearing
@@ -809,6 +835,7 @@ sp-ceramics=Ceramics
 sp-cerium-from-acrovoid=Cerium from acrovoid
 sp-charged-antimatter-fuel-cell=Charged antimatter fuel cell
 sp-charged-slab=Charged slab
+sp-chemical-science-pack=Chemical science pack
 sp-chemical-science-pack-2=Chemical science pack 2
 sp-chemical-science-pack-3=Chemical science pack 3
 sp-chemical-stager=Chemical stager
@@ -830,6 +857,7 @@ sp-collapsed-orbitals=Collapsed orbitals
 sp-combustion-chamber=Combustion chamber
 sp-composites=Composites
 sp-compressor=Compressor
+sp-computer-science-pack=Computer science pack
 sp-computer-science-pack-2=Computer science pack 2
 sp-computer-science-pack-3=Computer science pack 3
 sp-condenser-coil=Condenser coil
@@ -861,6 +889,7 @@ sp-crushing-coal=Crushing coal
 sp-crushing-cobalt-ore=Crushing cobalt ore
 sp-crushing-coke=Crushing coke
 sp-crushing-copper-ore=Crushing copper ore
+sp-crushing-corrupted-acrosphere=Crushing corrupted acrosphere
 sp-crushing-corrupted-acrosphere-1=Crushing corrupted acrosphere 1
 sp-crushing-corrupted-acrosphere-2=Crushing corrupted acrosphere 2
 sp-crushing-corrupted-acrosphere-3=Crushing corrupted acrosphere 3
@@ -901,13 +930,16 @@ sp-drillhead=Drillhead
 sp-drilling-fluid=Drilling fluid
 sp-duralumin=Duralumin
 sp-dynamo=Dynamo
+sp-efficiency-module=Efficiency module
 sp-efficiency-module-4=Efficiency module 4
 sp-electrode-from-iridium=Electrode from iridium
 sp-electrode-from-platinum=Electrode from platinum
 sp-electromagnet=Electromagnet
 sp-electromagnetic-brake=Electromagnetic brake
+sp-electromagnetic-science-pack=Electromagnetic science pack
 sp-electromagnetic-science-pack-2=Electromagnetic science pack 2
 sp-electromagnetic-science-pack-3=Electromagnetic science pack 3
+sp-electronic-science-pack=Electronic science pack
 sp-electronic-science-pack-1=Electronic science pack 1
 sp-electronic-science-pack-2=Electronic science pack 2
 sp-electronic-science-pack-3=Electronic science pack 3
@@ -976,6 +1008,7 @@ sp-fuel-injector=Fuel injector
 sp-gamma-radiation-source=Gamma radiation source
 sp-gearbox=Gearbox
 sp-gearshaft=Gearshaft
+sp-geological-science-pack=Geological science pack
 sp-geological-science-pack-1=Geological science pack 1
 sp-geological-science-pack-2=Geological science pack 2
 sp-geological-science-pack-3=Geological science pack 3
@@ -1110,6 +1143,7 @@ sp-liquid-sodium=Liquid sodium
 sp-lithium-chloride=Lithium chloride
 sp-lithium-oxide=Lithium oxide
 sp-lithium-sulfur-battery=Lithium sulfur battery
+sp-logistic-science-pack=Logistic science pack
 sp-logistic-science-pack-2=Logistic science pack 2
 sp-logistic-science-pack-3=Logistic science pack 3
 sp-lossless-power-connector=Lossless power connector
@@ -1126,17 +1160,20 @@ sp-manganese-dioxide=Manganese dioxide
 sp-manganese-ingot=Manganese ingot
 sp-manufacturer=Manufacturer
 sp-maraging-steel=Maraging steel
+sp-material-science-pack=Material science pack
 sp-material-science-pack-1=Material science pack 1
 sp-material-science-pack-2=Material science pack 2
 sp-material-science-pack-3=Material science pack 3
 sp-medium-storage-tank=Medium storage tank
 sp-memory-chip=Memory chip
 sp-mercury=Mercury
+sp-metallurgic-science-pack=Metallurgic science pack
 sp-metallurgic-science-pack-2=Metallurgic science pack 2
 sp-metallurgic-science-pack-3=Metallurgic science pack 3
 sp-methyl-tert-butyl-ether=Methyl tert butyl ether
 sp-micro-frame=Micro frame
 sp-micro-machine=Micro machine
+sp-military-science-pack=Military science pack
 sp-military-science-pack-2=Military science pack 2
 sp-military-science-pack-3=Military science pack 3
 sp-miniaturized-star-core-stabilizer=Miniaturized star core stabilizer
@@ -1169,6 +1206,7 @@ sp-nitenol=Nitenol
 sp-nitric-acid=Nitric acid
 sp-nitrogen=Nitrogen
 sp-nozzle=Nozzle
+sp-nuclear-science-pack=Nuclear science pack
 sp-nuclear-science-pack-2=Nuclear science pack 2
 sp-nuclear-science-pack-3=Nuclear science pack 3
 sp-nuclear-waste-processing=Nuclear waste processing
@@ -1212,7 +1250,9 @@ sp-precipitator=Precipitator
 sp-pressure-tube=Pressure tube
 sp-pressure-valve=Pressure valve
 sp-processor=Processor
+sp-production-science-pack=Production science pack
 sp-production-science-pack-3=Production science pack 3
+sp-productivity-module=Productivity module
 sp-productivity-module-4=Productivity module 4
 sp-propane=Propane
 sp-propylene=Propylene
@@ -1234,6 +1274,7 @@ sp-quark-gluon-plasma-container=Quark gluon plasma container
 sp-quark-gluon-probe=Quark gluon probe
 sp-quark-sphere=Quark sphere
 sp-quartz=Quartz
+sp-quasicrystal=Quasicrystal
 sp-quasicrystal-1=Quasicrystal 1
 sp-quasicrystal-2=Quasicrystal 2
 sp-radiant-glass=Radiant glass
@@ -1282,8 +1323,10 @@ sp-sodium-hydroxide-from-sodium=Sodium hydroxide from sodium
 sp-sodium-molybdate=Sodium molybdate
 sp-solder=Solder
 sp-solid-rocket-motor=Solid rocket motor
+sp-space-science-pack=Space science pack
 sp-space-science-pack-3=Space science pack 3
 sp-spark-plug=Spark plug
+sp-speed-module=Speed module
 sp-speed-module-4=Speed module 4
 sp-spring=Spring
 sp-stainless-steel=Stainless steel
@@ -1342,6 +1385,7 @@ sp-uranium-from-acrovoid=Uranium from acrovoid
 sp-uranium-fuel-rod=Uranium fuel rod
 sp-urea=Urea
 sp-used-up-fuel-rod-reprocessing=Used up fuel rod reprocessing
+sp-utility-science-pack=Utility science pack
 sp-utility-science-pack-3=Utility science pack 3
 sp-vacuum-pump=Vacuum pump
 sp-vacuum-tube=Vacuum tube
@@ -1428,8 +1472,7 @@ sp-antimatter=Antimatter
 sp-antimony-processing=Antimony processing
 sp-arc-furnace=Arc furnace
 sp-arsen-processing=Arsen processing
-sp-automation-science-pack-2=Automation science pack 2
-sp-automation-science-pack-3=Automation science pack 3
+sp-automation-science-pack=Automation science pack
 sp-ball-bearing=Ball bearing
 sp-barium-processing=Barium processing
 sp-basic-acrosphere-conversion=Basic acrosphere conversion
@@ -1446,16 +1489,14 @@ sp-breeder-reactor=Breeder reactor
 sp-carbon-high-tech=Carbon high tech
 sp-cement=Cement
 sp-ceramic-matrix-composites=Ceramic matrix composites
-sp-chemical-science-pack-2=Chemical science pack 2
-sp-chemical-science-pack-3=Chemical science pack 3
+sp-chemical-science-pack=Chemical science pack
 sp-chemical-stager=Chemical stager
 sp-chronomatter=Chronomatter
 sp-cobalt-alloys=Cobalt alloys
 sp-cobalt-processing=Cobalt processing
 sp-composites=Composites
 sp-compressor=Compressor
-sp-computer-science-pack-2=Computer science pack 2
-sp-computer-science-pack-3=Computer science pack 3
+sp-computer-science-pack=Computer science pack
 sp-control-unit=Control unit
 sp-cooling=Cooling
 sp-copper-extruding=Copper extruding
@@ -1467,15 +1508,12 @@ sp-cyclotron=Cyclotron
 sp-dark-matter=Dark matter
 sp-diamond=Diamond
 sp-dynamo=Dynamo
-sp-efficiency-module-4=Efficiency module 4
-sp-electric-energy-distribution-3=Electric energy distribution 3
+sp-efficiency-module=Efficiency module
+sp-electric-energy-distribution=Electric energy distribution
 sp-electrode=Electrode
-sp-electromagnetic-science-pack-2=Electromagnetic science pack 2
-sp-electromagnetic-science-pack-3=Electromagnetic science pack 3
+sp-electromagnetic-science-pack=Electromagnetic science pack
 sp-electronic-components=Electronic components
-sp-electronic-science-pack-1=Electronic science pack 1
-sp-electronic-science-pack-2=Electronic science pack 2
-sp-electronic-science-pack-3=Electronic science pack 3
+sp-electronic-science-pack=Electronic science pack
 sp-enriched-resource-from-acromatter=Enriched resource from acromatter
 sp-ethylene-products=Ethylene products
 sp-extreme-heat-source=Extreme heat source
@@ -1485,9 +1523,7 @@ sp-filter=Filter
 sp-flux-capacitor=Flux capacitor
 sp-freezer=Freezer
 sp-frictionless-joint=Frictionless joint
-sp-geological-science-pack-1=Geological science pack 1
-sp-geological-science-pack-2=Geological science pack 2
-sp-geological-science-pack-3=Geological science pack 3
+sp-geological-science-pack=Geological science pack
 sp-glass=Glass
 sp-glycerin=Glycerin
 sp-gravitational-devices=Gravitational devices
@@ -1526,21 +1562,16 @@ sp-kr-particle-accelerator=Particle accelerator
 sp-kr-portable-generator=Portable generator
 sp-kr-research-server=Research server
 sp-kr-wind-turbine=Wind turbine
-sp-logistic-science-pack-2=Logistic science pack 2
-sp-logistic-science-pack-3=Logistic science pack 3
+sp-logistic-science-pack=Logistic science pack
 sp-lumber-mill=Lumber mill
 sp-magnesium-processing=Magnesium processing
 sp-magnet=Magnet
 sp-manganese-processing=Manganese processing
 sp-manufacturer=Manufacturer
-sp-material-science-pack-1=Material science pack 1
-sp-material-science-pack-2=Material science pack 2
-sp-material-science-pack-3=Material science pack 3
+sp-material-science-pack=Material science pack
 sp-mercury-processing=Mercury processing
-sp-metallurgic-science-pack-2=Metallurgic science pack 2
-sp-metallurgic-science-pack-3=Metallurgic science pack 3
-sp-military-science-pack-2=Military science pack 2
-sp-military-science-pack-3=Military science pack 3
+sp-metallurgic-science-pack=Metallurgic science pack
+sp-military-science-pack=Military science pack
 sp-molybdenum-processing=Molybdenum processing
 sp-nanobot=Nanobot
 sp-neodymium-magnet=Neodymium magnet
@@ -1550,8 +1581,7 @@ sp-niobium-and-tantalum=Niobium and tantalum
 sp-nitenol=Nitenol
 sp-noble-gases=Noble gases
 sp-noble-metals=Noble metals
-sp-nuclear-science-pack-2=Nuclear science pack 2
-sp-nuclear-science-pack-3=Nuclear science pack 3
+sp-nuclear-science-pack=Nuclear science pack
 sp-nuclear-waste-processing=Nuclear waste processing
 sp-omni-pulse-generator=Omni pulse generator
 sp-optical-sensor=Optical sensor
@@ -1567,8 +1597,8 @@ sp-plutonium-processing=Plutonium processing
 sp-potassium-processing=Potassium processing
 sp-pressure-fluid=Pressure fluid
 sp-processed-resource-from-acrovoid=Processed resource from acrovoid
-sp-production-science-pack-3=Production science pack 3
-sp-productivity-module-4=Productivity module 4
+sp-production-science-pack=Production science pack
+sp-productivity-module=Productivity module
 sp-propane-products=Propane products
 sp-quantum-computing=Quantum computing
 sp-quantum-realm=Quantum realm
@@ -1596,9 +1626,9 @@ sp-silver-products=Silver products
 sp-sodium-hydroxide=Sodium hydroxide
 sp-sodium-processing=Sodium processing
 sp-solid-rocket-motor=Solid rocket motor
-sp-space-science-pack-3=Space science pack 3
+sp-space-science-pack=Space science pack
 sp-spark-plug=Spark plug
-sp-speed-module-4=Speed module 4
+sp-speed-module=Speed module
 sp-stainless-steel-processing=Stainless steel processing
 sp-star-stabilization=Star stabilization
 sp-steel-machining=Steel machining
@@ -1617,7 +1647,7 @@ sp-turbine-parts=Turbine parts
 sp-uniformity-science-pack=Uniformity science pack
 sp-upgrade-acrosphere-conversion=Upgrade acrosphere conversion
 sp-urea=Urea
-sp-utility-science-pack-3=Utility science pack 3
+sp-utility-science-pack=Utility science pack
 sp-vanadium-alloys=Vanadium alloys
 sp-vanadium-processing=Vanadium processing
 sp-vinyl-chloride=Vinyl chloride
